adminer/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app: adminer
  namespace: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: adminer
        resources:
        ports:
        - containerPort: 8080
          name: http-web-svc
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-svc
  namespace: adminer
spec:
  selector:
    app: adminer
  type: NodePort
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http-web-svc
    nodePort: 30008
